--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -49,7 +49,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
