--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.4</version>
         </dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.12</version>
+		</dependency>
     </dependencies>
 
 	<build>
